<resources>
    <string name="app_name">Thermomax_Calendar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Essensplan</string>
    <string name="menu_Kochbuch">Kochbuch</string>
    <string name="menu_sevenDays">7-Tage-Übersicht</string>
    <string name="title_activity_confirm">Confirm</string>
    <string name="title_activity_webview">WebView</string>
    <string name="hinweis_kochbuch">Bitte füge Rezepte hinzu.</string>
    <string name="menu_ingredients">Einkaufsliste</string>
    <string name="tip_7days">Es sind noch keine Rezepte für diese Woche geplant.\n\n
    Bitte gehe ins Kochbuch und lege fest,
    was Du in den nächsten 7 Tagen kochen möchtest!</string>
    <string name="tip_cb">Es sind noch keine Rezepte vorhanden.\n\n
    Füge Rezepte selbst, oder aus dem Internet
    mit dem Add-Button hinzu!</string>
    <string name="tip_einkaufsliste">Die Einkaufsliste wird aus den Rezeoten zusammen gestellt die Du in den nächsten 7 Tagen geplant hast.
    Klicke LANGE auf eine Zutat, um sie einer Kategorie zuzuordnen.</string>
    <string name="auf">auf</string>
    <string name="zu">zu</string>

    <string name="nr_desc_image">Bild</string>
    <string name="nr_desc_name">Rezeptname</string>
    <string name="nr_desc_autor">Urheber</string>
    <string name="nr_desc_indrigents">Zutatenliste</string>
    <string name="nr_desc_summary">Vorgehensweise</string>
    <string name="nr_desc_submit">Speichern</string>
    <string name="nr_desc_preview_on">Vorschau</string>
    <string name="nr_desc_preview_off">Nochmal bearbeiten</string>
    <string name="nr_button_browserback"><![CDATA[<<< zurück zum Browser]]></string>
    <string name="Ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="wv_close_text">Möchtest du den Browser schliessen?</string>
    <string name="nr_desc_indrigents_tip">Trage eine Zutat pro Zeile im Format MENGE - MAßEINHEIT - NAME ein. (Beispiel: 3 x Eier</string>
    <string name="nr_desc_summary_tipp">Beschreibe die Vorgehensweise. Mache nach jedem Schritt einen Absatz</string>
    <string name="nr_desc_name_tipp">Gib deinem Rezept einen Namen</string>

</resources>