<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.darkexceptionsoftware.thermomax_calendar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Kochbuch"
        android:name="com.darkexceptionsoftware.thermomax_calendar.ui.kochbuch.KochbuchFragment"
        android:label="@string/menu_Kochbuch"
        tools:layout="@layout/fragment_kochbuch" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.darkexceptionsoftware.thermomax_calendar.ui.sevenDays.sevenDaysFragment"
        android:label="@string/menu_sevenDays"
        tools:layout="@layout/fragment_webview" />
</navigation>