<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.sevenDays.sevenDaysFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="visible">

            <TextView
                android:id="@+id/nr_desc_bild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gradient_button_inverse"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/nr_desc_image"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/nr_field_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/strokebackground"
                android:scaleType="centerCrop"
                android:src="@drawable/img_norecipepic"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/nr_desc_name"
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gradient_button_inverse"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/nr_desc_name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/nr_field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/strokebackground"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="Bratwurst" />

            <TextView
                android:id="@+id/nr_desc_indrigents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gradient_button_inverse"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/nr_desc_indrigents"
                android:textColor="@color/white" />

            <WebView
                android:id="@+id/nr_webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                tools:ignore="WebViewLayout"/>

            <EditText
                android:id="@+id/nr_field_zutaten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/strokebackground"
                android:ems="10"
                android:inputType="textMultiLine|textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="Bratwurst\nBrötchen\nKetchup" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:gravity="center|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spinner_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:foregroundGravity="right"
                    android:gravity="end"
                    android:text="Zeilen"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="Untereinander" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nr_button_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/gradient_button"
                    android:drawableTintMode="screen"
                    android:gravity="center_horizontal|top|fill_vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/nr_desc_preview_on"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/nr_desc_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gradient_button_inverse"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/nr_desc_summary"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/nr_field_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/strokebackground"
                android:ems="10"
                android:inputType="textMultiLine|textPersonName"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="Vorgang" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nr_button_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gradient_button"
                android:gravity="center"
                android:text="@string/nr_desc_submit"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>